# ScreenInvader_old

./: .functions.sh  .gitignore  README  README.markdown  README.md  bootstrap.sh  firstboot.sh  index.html  makeimage.sh  makestick.sh  params.json  runimage.sh  runvm.sh  wishlist
cgi-bin/: beamermode  blank  browse  clean  environmental  findfilm  findlink  findmusic  findseries  forward  getGeometry  getScreenHeight  getScreenWidth  getinput  getstatus  getvol  headline  hello  image  initrequest  isBeamermode  isBlank  muteon  off  on  pagedown  pageup  playlink  post  printheadline  printtext  randomlink  scrolldown  scrollup  show  startmidori  switch  text  treble  unblank  (+6 more)
cgi-bin/conf/: resolution
cgi-bin/link/: findfilm  findlink  findmusic  findseries  functions  playlink  randomlink
cgi-bin/mpd/: artist  id  lyrics  playlist  time  title  track
cgi-bin/mplayer/: forward  forwardmore  pause  rewind  rewindmore  togglesub
cgi-bin/requests/: AUDIO1  AUDIO2  AUDIO3  AUDIO4  AV1  AV2  AV3  AV4  AV5  AV6  AV7  Bluetooth  DOCK  HDMI1  HDMI2  HDMI3  HDMI4  HDMI5  HDMI6  HDMI7  MULTI CH  NET RADIO  Napster  PC  PHONO  Pandora  Rhapsody  SIRIUS  SIRIUS InternetRadio  TUNER  UAW  USB  V-AUX  bass  bla  getinput  getstatus  iPod  iPod (USB)  muteoff  (+5 more)
cgi-bin/screen/: isBeamermode  isBlank  setBlank  toggleBeamermode  toggleBlank
cgi-bin/sound/: bass  bass-less  bass-more  getBass  getTreble  getVolume  isMute  muteoff  setBass  setTreble  setVolume  toggleMute  treble-less  treble-more  volume-less  volume-more
config/: files_black  kernel  keyrings  packages_additional  packages_black  packages_build  packages_extra  packages_sid  packages_white  video_drivers
data/etc/: auto.master  fstab  inittab  mpd.conf  passwd
data/lounge/: .bashrc  mpd.conf  thttpd.conf  xsession.sh
etc/: mplayer.conf  rc.lua  xorg.conf
packaging/: makeall.sh  makebinaries.sh  makeconfig.sh  makecontrol.sh  makecore.sh  makekernel.sh  makemisc.sh
repo/: ScreenInvaderRepoKey.gpg  makerepo.sh
repo/conf/: distributions  override.latest
repo/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db  version
setup/: firstboot.sh
setup/templates/: auto_smb  inittab  interfaces_dhcp  interfaces_man  resolv_conf
src/boot/: boot.scr  boot.script  script.fex
src/etc/: auto.removable  fstab  group  gshadow  inittab  modules  passwd  rc.local  shadow  sudoers  sysctl.conf
src/lounge/: .asoundrc  .bashrc  .xpdfrc  janosh.db  janosh.db.initial  lounge-firstboot.cnf  lounge.json  lounge.json.last  makefirstboot.sh  settings.json  xsession.sh
src/root/: .asoundrc  .bashrc  .xbindkeysrc  janosh.db.after_screenconfig  root.json  root.json.last
src/setup/: askconfig.sh  firstboot.sh  template-firstboot.cnf
templates/: 00aptcacher  apt_preferences  inittab  interfaces_dhcp  interfaces_man  policy-rc_d  resolv_conf  sources_list  sources_list2  syslinux_cfg
themes/screeninvader/: screeninvader.plymouth
third/: build_dri2.sh  build_janosh.sh  build_libvdpau-sunxi.sh  build_luajitrocks.sh  build_mplayer.sh  build_simpleosd.sh  build_sunxi-mali.sh  build_sunxi-tools.sh  build_thttpd.sh  build_u-boot-sunxi.sh  build_ump.sh  build_xf86-video-fbturbo.sh  clone_dri2.sh  clone_janosh.sh  clone_libvdpau-sunxi.sh  clone_luajitrocks.sh  clone_simpleosd.sh  clone_sunxi-mali.sh  clone_sunxi-tools.sh  clone_ump.sh  clone_xf86-video-fbturbo.sh  simpleOSD.tar.bz2  youtube-dl
third/Janosh/: .gitignore  Makefile  README.md  backward.cpp  bash.cpp  bash.hpp  cache.cpp  cache.hpp  cache_thread.cpp  cache_thread.hpp  commands.cpp  commands.hpp  component.cpp  component.hpp  database_thread.cpp  database_thread.hpp  easylogging++.h  exception.cpp  exception.hpp  exithandler.cpp  exithandler.hpp  flusher_thread.cpp  flusher_thread.hpp  format.hpp  janosh.cpp  janosh.hpp  janosh_thread.cpp  janosh_thread.hpp  json.cpp  json.hpp  logger.cpp  logger.hpp  path.cpp  path.hpp  print_visitor.hpp  raw.cpp  raw.hpp  record.cpp  record.hpp  request.cpp  (+22 more)
third/MPlayer-1.1.1/: Changelog  asxparser.c  asxparser.d  av_helpers.d  av_opts.d  bstr.d  cfg-mplayer.h  codec-cfg  codec-cfg.d  codecs.conf.h  command.d  config.h  config.mak  cpudetect.d  edl.d  fmt-conversion.d  help_mp.h  (+20 more)
third/libdri2/: Makefile.am  README  autogen.sh  configure.ac  dri2.pc.in
third/libdri2/include/X11/extensions/: Makefile.am
third/libdri2/src/: Makefile.am  dri2.c
third/libdri2/test/: Makefile.am  dri2-nouveau.c  dri2-omap.c  dri2test.c  dri2util.c  dri2util.h
www/: cleanup.html  cleanup_control.html  find_control.html  index.html  lyrics.html  mpdstat.html  random_control.html  screen_control.html  show_control.html  sound_control.html  status.html  switch_control.html
(+2908 files in other folders)
