noinst_LTLIBRARIES = libdri2test.la

COMMON_SOURCES = dri2util.c
COMMON_LIBADD  = @DRI2_LIBS@ 
COMMON_CFLAGS  = -g -O0 $(CWARNFLAGS) -I$(top_srcdir)/include @DRI2_CFLAGS@

if ENABLE_NOUVEAU
COMMON_SOURCES += dri2-nouveau.c
COMMON_LIBADD  += @NOUVEAU_LIBS@
COMMON_CFLAGS  += @NOUVEAU_CFLAGS@
endif

if ENABLE_OMAP
COMMON_SOURCES += dri2-omap.c
COMMON_LIBADD  += @OMAP_LIBS@
COMMON_CFLAGS  += @OMAP_CFLAGS@
endif

libdri2test_la_SOURCES = dri2test.c $(COMMON_SOURCES)
libdri2test_la_LIBADD = $(COMMON_LIBADD)
libdri2test_la_CFLAGS = $(COMMON_CFLAGS)
